Add water contact and depth check

--- a/modules/Movecraft/src/main/resources/localisation/movecraftlang_en.properties
+++ b/modules/Movecraft/src/main/resources/localisation/movecraftlang_en.properties
@@ -138,3 +138,5 @@ Direct\ Control\ -\ Entering=Entering Direct Control Mode
 Direct\ Control\ -\ Must\ be\ player=Only players may toggle direct control
 Direct\ Control\ -\ Leaving=Leaving Direct Control Mode
 You\ must\ be\ piloting\ a\ craft=You must be piloting a craft
+Translation\ -\ Failed\ Craft\ hit\ minimum\ water\ depth\ limit=This craft cannot sail waters shallower than %s blocks!
+Translation\ -\ Failed\ Craft\ hit\ maximum\ water\ depth\ limit=This craft cannot sail waters deeper than %s blocks!
