Fix translation and detection depth check

--- a/modules/Movecraft/src/main/resources/localisation/movecraftlang_en.properties
+++ b/modules/Movecraft/src/main/resources/localisation/movecraftlang_en.properties
@@ -49,7 +49,7 @@ Detection\ -\ Not\ enough\ flyblock=Not enough flyblock
 Detection\ -\ Too\ much\ flyblock=Too much flyblock
 Detection\ -\ Not\ Registered\ Pilot=Not one of the registered pilots on this craft
 Detection\ -\ Craft\ Type\ Cannot\ Be\ Named=Crafts of this type cannot be named
-Detection\ -\ Failed\ -\ Water\ contact\ required\ but\ not\ found=Detection failed\: Water contact required but not found
+Detection\ -\ Failed\ -\ Water\ contact\ required\ but\ not\ found=This craft cannot sail upon land!
 Detection\ -\ Forbidden\ sign\ string\ found=Detection Failed\! Forbidden strings found on signs on this craft
 Detection\ -\ Too\ many\ signs\ with\ string=Detection Failed\! Too many signs containing the following string(s):
 Economy\ -\ Not\ Enough\ Money=You do not have enough money
