--- a/modules/Movecraft/src/main/resources/localisation/movecraftlang_en.properties
+++ b/modules/Movecraft/src/main/resources/localisation/movecraftlang_en.properties
@@ -140,3 +140,4 @@ Direct\ Control\ -\ Leaving=Leaving Direct Control Mode
 You\ must\ be\ piloting\ a\ craft=You must be piloting a craft
 Translation\ -\ Failed\ Craft\ hit\ minimum\ water\ depth\ limit=This craft cannot sail waters shallower than %s blocks!
 Translation\ -\ Failed\ Craft\ hit\ maximum\ water\ depth\ limit=This craft cannot sail waters deeper than %s blocks!
+Detection\ -\ Failed\ Cannot\ afford\ craft=You cannot afford to pilot this craft! Cost: %s
